chart/templates/patches/admin-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.helm.sh/release-name: istio-system-istio
    meta.helm.sh/release-namespace: istio-system
  labels:
    app.kubernetes.io/managed-by: Helm
    helm.toolkit.fluxcd.io/name: istio
    helm.toolkit.fluxcd.io/namespace: bigbang
  name: admin
  namespace: istio-system
spec:
  selector:
    app: admin-ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 8080
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - '*'
    port:
      name: https
      number: 8443
      protocol: HTTPS
    tls:
      credentialName: admin-cert
      minProtocolVersion: TLSV1_3
      mode: SIMPLE
